# ml2

./: .gitignore  .gitmodules  README.md  config.sh  pyproject.toml
.github/workflows/: main.yml
doc/: multiscaleoperator.qmd  ntk.qmd  operators.qmd  ref.bib
ntk/: 1d_ntk_opt.ipynb  1d_ntk_opt.py
operator/: AdaFNN.ipynb  adafnn.py  func_autoenc.py
pinn/: bc.py  cheby.py  derivatives_comp.ipynb  derivatives_comp.py  gs_1d.ipynb  gs_1d.py  pinn_1d.ipynb  pinn_1d.py  pinn_1d_fo.ipynb  pinn_1d_fo.py  pinn_2d.ipynb  pinn_2d.py  pinn_pred_corr.py  sync_jupytext.sh  utils.py
tests/: test_main.py  test_run_pinn_1d.sh
tony/: README.md  run.tuo  setup.sh  test_poisson.py  test_reaction_diffusion.py
tony/analysis/: fourier.py
tony/config/: elliptic.py  poisson.py
tony/data/: samplers.py
tony/loss/: poisson.py  reaction_diffusion.py
tony/model/: bc.py  mlp.py  nn.py
tony/pde/: poisson.py  reaction_diffusion.py
tony/utils/: log.py  visualize.py
tony/writing/: note.tex  poisson.tex
