[tool.poetry]
name = "ml2"
version = "0.1.0"
description = "Multi-level learning with PINN"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.1"
numpy = "^2.3.0"
matplotlib = "^3.10.3"
scipy = "^1.15.3"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
